chore: address review comments