@@ -1,12 +1,13 @@
 package ai.timefold.jpyinterpreter;
 
+import java.util.Collections;
 import java.util.List;
 
 import ai.timefold.jpyinterpreter.types.PythonLikeType;
 
 public record TypeHint(PythonLikeType type, List<AnnotationMetadata> annotationList) {
     public static TypeHint withoutAnnotations(PythonLikeType type) {
-        return new TypeHint(type, List.of());
+        return new TypeHint(type, Collections.emptyList());
     }
 
 }
